@@ -224,7 +224,8 @@ class CfgRemoteExec {
 		class d_fnc_setbcnil {};
 		class d_fnc_ascfc {allowedTargets = 2;};
 		class d_fnc_emiss {allowedTargets = 1;};
-		class d_fnc_pdistar {allowedTargets = 2;};	
+		class d_fnc_pdistar {allowedTargets = 2;};
+		class d_fnc_flare40 {allowedTargets = 1;};
 #ifdef __TT__
 		class d_fnc_addpoints {allowedTargets = 2;};
 		class d_fnc_addsmpoints {allowedTargets = 2;};
@@ -1205,6 +1206,13 @@ default = 7;
 
 	class d_MTTowerSatchelsOnly {
 		title = "$STR_DOM_MISSIONSTRING_1213";
+		values[] = {0,1};
+		default = 0;
+		texts[] = {"$STR_DOM_MISSIONSTRING_922","$STR_DOM_MISSIONSTRING_1007"};
+	};
+	
+	class d_IllumMainTarget {
+		title = "$STR_DOM_MISSIONSTRING_2050";
 		values[] = {0,1};
 		default = 0;
 		texts[] = {"$STR_DOM_MISSIONSTRING_922","$STR_DOM_MISSIONSTRING_1007"};
