@@ -235,5 +235,10 @@ if (!isNil "d_sm_speedboat" && {d_sm_speedboat != ""}) then {
 	[_trg_center, _mtradius] spawn d_fnc_seapatrol;
 };
 
+sleep 0.1;
+if (d_IllumMainTarget == 0) then {
+	[_trg_center, _mtradius] execFSM "fsms\fn_Illum.fsm";
+};
+
 sleep 5.213;
 d_main_target_ready = true;
